crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__while__closure_in_body.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/closure_in_body.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var f1 (global @1) ∅)
   (var f2 (global @2) ∅)
   (var f3 (global @3) ∅)
   (var i (global @4) 1.0)
   (while
      (< (global i @4) 4.0)
      (block
         (var j (cell @0) (global i @4))
         (fun f (local @6) [] [Some(0)]
            (block
               (print (cell j @0))))
         (if
            (== (cell j @0) 1.0)
            (expr (= (global f1 @1) (local f @6)))
            (if
               (== (cell j @0) 2.0)
               (expr (= (global f2 @2) (local f @6)))
               (expr (= (global f3 @3) (local f @6)))))
         (expr (= (global i @4) (+ (global i @4) 1.0)))))
   (expr (call +5 (global f1 @1)))
   (expr (call +5 (global f2 @2)))
   (expr (call +5 (global f3 @3))))

----- stderr -----
