crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__while__return_closure.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/return_closure.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @1) [] [None]
      (block
         (while
            true
            (block
               (var i (cell @0) "i")
               (fun g (local @0) [] [Some(0)]
                  (block
                     (print (cell i @0))))
               (return (local g @0))))))
   (var h (global @2) (call +2 (global f @1)))
   (expr (call +3 (global h @2))))

----- stderr -----
