crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__while__return_inside.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/return_inside.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (fun f (global @3) [] []
      (block
         (while
            true
            (block
               (var i (local @0) "i")
               (return (local i @0))))))
   (print (call +4 (global f @3))))

----- stderr -----
