crabbing-interpreters/tests/testsuite/snapshots/testsuite__scope-craftinginterpreters__test__while__syntax.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/while/syntax.lox
    - "--scopes"
    - "--stop-at=scopes"
---
success: true
exit_code: 0
----- stdout -----
(program
   (var c (global @1) 0.0)
   (while
      (< (global c @1) 3.0)
      (print (= (global c @1) (+ (global c @1) 1.0))))
   (var a (global @2) 0.0)
   (while
      (< (global a @2) 3.0)
      (block
         (print (global a @2))
         (expr (= (global a @2) (+ (global a @2) 1.0)))))
   (while
      false
      (if
         true
         (expr 1.0)
         (expr 2.0)))
   (while
      false
      (while
         true
         (expr 1.0)))
   (while
      false
      (for
         ∅
         ∅
         ∅
         (expr 1.0))))

----- stderr -----
